tests/resource/valid/call/call_with_class_child.mamba
class MyClass
class MyChildClass: MyClass

def my_fun(arg: MyClass) => pass

my_fun(MyClass())
my_fun(MyChildClass())
