tests/resource/invalid/type/call/call_with_parent.mamba
class MyClass
class MyChildClass: MyClass

def my_fun(arg: MyChildClass) => pass

my_fun(MyClass())
